--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,10 +126,6 @@ body > section,
 .mb50 {
 	margin-bottom: 50px;
 }
-.mt25 {
-	margin-top: 25px;
-}
-
 #preloader {
   background-color: #fff;
   height: 100%;
